<resources>
    <string name="app_name">GPA+</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email/Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Create new Account</string>
    <string name="prompt_school">School</string>
    <string name="action_create">Create</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="slogan">Create the perfect study group.</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
	
	<string name="title_activity_register">RegisterActivity</string>

    <string name="action_settings">Settings</string>
</resources>
